@@ -40,6 +40,7 @@ Note (2): the releases described are for wxGTK, wxMSW and wxMotif ports. wxMac c
 its own development path. Also, minor snapshot releases for specific platforms may be
 available at dates convenient to the developers.<P>
 
+<div style="page-break-before:always"></div>
 <HR> <FONT SIZE=+2><I><B><a name="schedule">Schedule</a></B></I></FONT> <HR>
 <P>
 
@@ -120,7 +121,7 @@ combined base/GUI library for GUI applications only.
 
 <P>
 
-<HR> <FONT SIZE=+2><I><B><a name="todo">To-Do List</a></B></I></FONT> <HR>
+<HR> <FONT SIZE=+2><I><B><a name="todo"><div style="page-break-before:always">To-Do List</div></a></B></I></FONT> <HR>
 
 <P>
 
